--- a/views/index.jade
+++ b/views/index.jade
@@ -1,14 +1,14 @@
 doctype html
 html
     head
-        title= "Interactive Whiteboard | Swapnil"
+        title= "Interactive Whiteboard | Swapnil Amit Abhijeet Pritam"
         link(rel='stylesheet', href='/stylesheets/style.css')
         script(src='/socket.io/socket.io.js')
         script(src='/javascripts/lib/zepto.js')
         script(src='/javascripts/lib/paper.js')
         script(src='/javascripts/canvas.js', type="text/paperscript", canvas="myCanvas")
     body
-    h4 Realtime whiteboard - @Swapnil
+    h4 Realtime whiteboard - @Swapnil, Amit, Abhijeet, Pritam
     div(id="controls")
         div(id="userCountWrapper", style="opacity:0") artists:
             span(id="userCount")
